Fixed plants cover text on mobile device problem

--- a/style.css
+++ b/style.css
@@ -217,6 +217,7 @@ nav {
 
 .plant {
     position: absolute;
+    max-height: 100%;
     bottom: 0;
     left: -20%;
     z-index: -1;
